# core-engine

./: .env.example  .gitignore  API.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
src/api/: dependencies.py  main.py  routes.py  schemas.py
src/core_engine/agents/: banding_agent.py  property_agents.py
src/core_engine/graphs/: property_analysis.py  property_banding_workflow.py
src/core_engine/utils/: fuzzy_match.py  geo.py  iqr_analysis.py  property_mapper.py
src/database/: property_repository.py
src/models/: property.py  property_config.py
tests/: conftest.py  fixtures.py
tests/api/: test_routes.py
tests/core_engine/agents/: test_banding_agent.py  test_property_agents.py
tests/core_engine/graphs/: test_property_analysis.py  test_property_banding_workflow.py
tests/core_engine/utils/: test_fuzzy_matching.py  test_geo.py  test_iqr_analysis.py  test_property_mapper.py
tests/database/: test_property_repository.py
tests/models/: test_property_config.py  test_property_model.py
